# unity_shenanigans

./: .gitignore  CMakeLists.txt  flake.nix
inc/: some_func.h
src/: main.c  some_func.c
tests/: some_func_tests.c  unity_config.h  unity_helper.c  unity_helper.h
